--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,6 +26,9 @@
 #results{
   font-family: 'Roboto';
   text-align: center;
+  width: 10.5em;
+  margin-left: auto;
+  margin-right: auto;
 }
 #footer{
   text-align: center;
@@ -36,4 +39,25 @@
 }
 .letter-counts{
   font-family: Courier;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.count-holder {
+  text-align: center;
+  width: 30px;
+  color: black;
+  display: inline-block;
+}
+
+.grey-row {
+  background-color: #005a43; /* Pantone 342 */
+  background-color: gray;
+  color: white;
+}
+
+.same-row {
+  display: inline-block;
+  width: 5em;
+  font-weight: bolder;
 }
